--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-use-scroll-snap": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
