--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "prettier": "^2.8.8",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2"
   }
 }
